# Cold-Brew

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src-tauri/: Cargo.toml  rustc-ice-2024-05-07T10_41_09-103588.txt  rustc-ice-2024-05-07T10_41_09-103589.txt  tauri.conf.json
src-tauri/src/: jellyfin.rs  lib.rs  musicPlayer.rs
src/lib/: types.ts  websocket.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
