[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.16", features = [] }
reqwest = "0.12.4"
lazy_static = "1.4.0"
ezsockets = {version="0.6.2", features= ["server", "tungstenite"] }
async-trait = {version="0.1.80", features= [] }
tracing-subscriber = "0.3.18"
tokio = { version = "1.37.0", features = ["full"] }
